Fixed z-index of page-loading

--- a/web/src/core/assets/scss/_theme.scss
+++ b/web/src/core/assets/scss/_theme.scss
@@ -8,7 +8,7 @@
   gap: 30px;
   justify-content: center;
   align-items: center;
-  z-index: 1;
+  z-index: 9999999;
 
   &__spinner {
     width: 4rem;
